--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-30 09:07:59
+lastsearch = 2024-07-30 10:33:58
 
 [chanrathanhthuy.com]
-match = -3.2%%
-title = Chọn màu sắc chăn ga gối đệm hợp phong thủy vợ chồng
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-vo-chong-1469.html
+match = 9.7%%
+title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
-match = 63.3%%
-title = Bộ chăn ga gối lụa 6 món L6M18
-url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
+match = 58.1%%
+title = Bộ chăn ga gối Hanvico LIVING - LV18
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html?srsltid=AfmBOoqmsZFZwx8NhK9o1EWl3mdl4S0_v_4fxWxQcSfAw09a1yBhvlKs
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UT23 032
-url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-027
+match = 53.8%%
+title = Bộ chăn ga gối SH_UC23 031
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-32
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -112,9 +112,9 @@ title = COZINO|Bộ chăn ga gối Lụa satin cao cấp CZN 18-Họa tiết ...
 url = https://cozino.vn/do-dung-gia-dinh/bo-chan-ga-goi-lua-satin-cao-cap-czn-18-hoa-tiet-theu-hoa-day/
 
 [songhong.info]
-match = -6.5%%
-title = Mẫu sản phẩm chăn ga gối Sông Hồng WaltDisney YC20003
-url = https://songhong.info/chan-ga-goi-yc20003
+match = -9.7%%
+title = Chăn ga gối Walt Disney chính hãng Sông Hồng sản xuất
+url = https://songhong.info/chan-ga-goi-walt-disney
 
 [dodungnoithat.vn]
 match = -6.5%%
