--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-30 00:01:41
+lastsearch = 2024-07-30 10:33:39
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -695,4 +695,9 @@ url = https://original-ufdc.uflib.ufl.edu/AA00038543/00237
 match = -86.4%%
 title = Pedestrian Safety Improvement Program - SafeTREC
 url = https://safetrec.berkeley.edu/sites/default/files/publications/ped_safety_improvement_escholarship_uc_item_2c85n5xt.pdf
+
+[www.adb.org]
+match = 0.0%%
+title = 
+url = https://www.adb.org/business/how-to/what-does-it-mean-be-debarred-adb
 
