--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-30 02:59:27
+lastsearch = 2024-07-30 10:38:52
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -6.2%%
-title = Dvorak Genshin Bpc
-url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
+match = -200.0%%
+title = obessed with this 90’s brown lip duo by @Huda Beauty ...
+url = https://www.tiktok.com/@andrearomanofficial/video/7384118842538200353
 
 [www.diepxuan.com]
 match = -162.5%%
