--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-30 05:15:23
+lastsearch = 2024-07-30 10:33:17
 
 [ninhouse.vn]
-match = -246.2%%
-title = Áo gối | Bao gối đẹp giá rẻ NIN House cao cấp tại Tphcm
-url = https://ninhouse.vn/collections/vo-goi
+match = -161.5%%
+title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi?srsltid=AfmBOoptk3qrtkBtUBQ1UbKruVqQUV2gzTpSQBP0Ipl1K9qwFd568Tpm
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -107.7%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOorPo1FAdE-alc6-bwSo4C_QUCPpwMAcMfuPAD1rLBmHfeQWXl32
 
 [www.reddit.com]
 match = -230.8%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -215.4%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOop_BGEVOpZem_VwXmR23Xk634kOZtMj5JIWrIX4QtgSdeFQcriJ
 
 [www.everonvn.vn]
 match = 15.4%%
