--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-30 05:35:31
+lastsearch = 2024-07-30 12:18:03
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = -18.5%%
+title = Chăn Băng Lông Tuyết Nhung, Chăn Thái Sịn Cho Mùa ...
+url = https://shopee.vn/Chăn-Băng-Lông-Tuyết-Nhung-Chăn-Thái-Sịn-Cho-Mùa-Đông-Ấm-Áp-Loại-5kg-2x2-2m-i.529742790.25408766175
 
 [www.lazada.vn]
 match = 3.7%%
@@ -52,9 +52,9 @@ title = Email Address Obfuscation - WAF
 url = https://developers.cloudflare.com/waf/tools/scrape-shield/email-address-obfuscation/
 
 [tamanhhospital.vn]
-match = -63.0%%
-title = Dấu hiệu bệnh nguy hiểm ở trẻ bố mẹ nên biết & phương ...
-url = https://tamanhhospital.vn/dau-hieu-benh-nguy-hiem-o-tre-bo-me-nen-biet/
+match = -70.4%%
+title = Cách điều trị cúm B như thế nào hiệu quả, giảm tỷ lệ biến ...
+url = https://tamanhhospital.vn/cach-dieu-tri-cum-b/
 
 [betuti.vn]
 match = 48.1%%
@@ -270,4 +270,9 @@ url = https://kysucongnghe.net/resource/dacsan/ds5_2013/ds5p1_30.PDF
 match = -14.8%%
 title = Thaksin Shinawatra – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Thaksin_Shinawatra
+
+[www.vietnam.vn]
+match = -48.1%%
+title = Tuyển Việt Nam: HLV Kim Sang Sik sắp đến lúc trổ tài
+url = https://www.vietnam.vn/tuyen-viet-nam-hlv-kim-sang-sik-sap-den-luc-tro-tai/
 
