--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-30 02:01:54
+lastsearch = 2024-07-30 12:14:13
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -164.7%%
-title = Estrogenic Modulation of Ionic Channels, Pumps and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10178541/
+match = -194.1%%
+title = Non-alcoholic fatty liver disease and colorectal cancer ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
 
 [books.google.com]
 match = -200.0%%
 title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0u5u66Kl&sig=ACfU3U1DRzKrJ5o52bVb5TBtZuDJu7f7eQ&hl=en&sa=X&ved=2ahUKEwj2h8XbrcyHAxWeMlkFHW76ArwQ6AF6BAgnEAM
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0u6q33Gh&sig=ACfU3U2yix40bgjDyiz22kYR3hTZ6a8wBw&hl=en&sa=X&ved=2ahUKEwi96aHjgM6HAxUMkO4BHYASPJEQ6AF6BAgZEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -147.1%%
-title = Can someone introduce me to a K-pop group named ...
-url = https://www.quora.com/Can-someone-introduce-me-to-a-K-pop-group-named-ATEEZ-Ateez-I-heard-their-song-Answer-and-I-like-it-I-think-Im-going-to-be-a-new-fan
+match = -176.5%%
+title = How much do you know about each member of the Korean ...
+url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
 
 [msaniimusicgroup.org]
 match = 0.0%%
