--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-30 10:29:00
+lastsearch = 2024-07-30 12:19:02
 
 [www.tiktok.com]
-match = -200.0%%
-title = obessed with this 90’s brown lip duo by @Huda Beauty ...
-url = https://www.tiktok.com/@andrearomanofficial/video/7384118842538200353
+match = -243.8%%
+title = Lip liner: @Huda Beauty in muted pink Lipstick: @Charlotte ...
+url = https://www.tiktok.com/@faydeutsch/video/7278866493734178094
 
 [digitalmaine.com]
 match = -75.0%%
