--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-30 12:43:46
+lastsearch = 2024-07-30 15:44:02
 
 [everon.online]
-match = -32.0%%
-title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
-url = https://everon.online/collections/chan-bon-mua-everon
+match = 12.0%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
 match = -32.0%%
