--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-30 12:47:30
+lastsearch = 2024-07-30 15:44:25
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 06
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-06.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = 35.7%%
+title = Ga chun EPCARLESS 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
