--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-30 15:25:23
+lastsearch = 2024-07-30 15:31:12
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -150.0%%
-title = Consensus Guidelines on the Use of Intravenous Ketamine ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6023575/
+match = -130.0%%
+title = Uncoupling Proteins: Role in Insulin Resistance and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
 
 [www.energy.gov]
 match = -95.0%%
