--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-30 13:51:18
+lastsearch = 2024-07-30 15:58:36
 
 [shopee.vn]
-match = -137.5%%
-title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
-url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
+match = -162.5%%
+title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
+url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
-match = -156.2%%
-title = Rua-chan (@rua_kouhai) • Instagram photos and videos
-url = https://www.instagram.com/rua_kouhai/?hl=en
+match = -162.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
-match = 28.6%%
-title = Con rùa vũ trụ
-url = https://vi.wikipedia.org/wiki/Con_rùa_vũ_trụ
+match = -75.0%%
+title = Rùa Hoàn Kiếm – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Rùa_Hoàn_Kiếm
 
 [tuongdamynghe.com]
 match = 6.2%%
