--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -24,7 +24,7 @@ url = https://khoaibaby.vn/set-chieu-dieu-hoa-hermon-kem-goi-hk2212
 [vtvhyundai.vn]
 match = -24.0%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoo84cxz8Zzo_h0spVNmfZtZZ5V84GuYEYkmiGlzANAL37wFiMd1
 
 [voicon.net]
 match = 36.0%%
@@ -39,7 +39,7 @@ url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooTxFaVkWZQQLvj3MrdynsL28iMCE1VGvoli56FMCfSYuf1Zi5i
 
 [tiki.vn]
 match = -20.0%%
