--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-30 14:57:33
+lastsearch = 2024-07-30 15:51:04
 
 [demxanh.com]
 match = 25.9%%
 title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html?srsltid=AfmBOopuRWyeC88iPNG_2zPldey_odpIBLYv7fvn_iEl53PmA2_32kBJ
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [goni.vn]
 match = 14.8%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Kh
 [foreverbedding.net]
 match = 0.0%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOoq3nrP9VN5lAGspmkr1CqVayy3FwJkM5Meoih596DrqId0n9ygv
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOoouv8ZQZx-ZJIE_KWeDk7ccgpGDp-A-_mw6zCEiqG_m9pg2R7lC
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
 [chieutrelinhchi.com]
 match = 0.0%%
