--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-30 13:48:50
+lastsearch = 2024-07-30 15:49:44
 
 [www.bible.com]
-match = 23.1%%
-title = sawltak 20:22
-url = https://www.bible.com/bible/368/ACT.20.22.TDB
+match = -64.7%%
+title = Matyu 20 | TPIPNG Bible | YouVersion
+url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -200.0%%
-title = 3 Nifai 5 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/5?lang=tpi
+match = -205.9%%
+title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
