--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-30 09:57:29
+lastsearch = 2024-07-30 16:00:00
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -22,8 +22,8 @@ title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -50.0%%
-title = Thảm tròn trải chân giường trong phòng ngủ ...
+match = -104.5%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
@@ -32,9 +32,9 @@ title = (FREESHIP) Thảm chân giường, thảm bếp dài ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [decoviet.vn]
-match = -36.4%%
-title = Showroom Thảm Sofa Giá Rẻ Tại Bình Dương
-url = https://decoviet.vn/tham-sofa-binh-duong/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [shopee.vn]
 match = -50.0%%
@@ -62,9 +62,9 @@ title = Thảm - Drap giường, chăn ga gối ...
 url = https://drapgiuonghanquoc.com/danh-muc-san-pham/tham-rem/tham/
 
 [moho.com.vn]
-match = -22.7%%
-title = Thảm Trải Sàn - Đồ Trang Trí / Đồ Decor
-url = https://moho.com.vn/collections/tham
+match = -72.7%%
+title = Nguyên tắc lựa chọn thảm trang trí cho gia đình
+url = https://moho.com.vn/blogs/noi-that-ung-dung/nguyen-tac-lua-chon-tham-trang-tri-cho-gia-dinh
 
 [homeoffice.com.vn]
 match = -54.5%%
@@ -82,8 +82,8 @@ title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
 url = https://www.airbnb.com.vn/rooms/1258488
 
 [comehome.com.vn]
-match = -77.3%%
-title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ ...
+match = -109.1%%
+title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ cho bé ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
