--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-30 12:13:33
+lastsearch = 2024-07-30 15:52:29
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html?srsltid=AfmBOoprQalTUb2EDbnEAPUMpncV5C0ZiTG7iYAxuddCcHMVmgqAapOD
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -44,7 +44,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html?srsltid=AfmBOoqfFiKBqYmFIzv5CpnRjilDkvFnxr2pwfqjkhuBHe8wZTPHczed
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
 match = -77.3%%
