--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-30 10:35:02
+lastsearch = 2024-07-30 15:44:14
 
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html?srsltid=AfmBOopK27H11fV7g1VA9IMeEVUzOQ0N8PopZ9YFNtNYTlGndpr-5GSK
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html?srsltid=AfmBOoqWZwIY-W6rp93hs2cNluTkFjhhIklxQv4VTlO2f4exN1Ut9DKm
 
 [www.lazada.vn]
 match = -68.2%%
 title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOoqs0mGC18rurJ0v_M08th2hzqBU78XUTFWzzsHQFsSBUhzkhTpi
 
 [noithatlongthai.com]
 match = -13.6%%
