--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-30 12:01:18
+lastsearch = 2024-07-30 16:18:37
 
 [tiki.vn]
 match = -47.6%%
@@ -17,14 +17,14 @@ title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
 url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -42.9%%
-title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
-url = https://www.roc-taiwan.org/vn_vi/post/62.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = 0.0%%
+title = 
+url = https://www.tiktok.com/@duongdeofficial/video/7315000665816829186
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -113,8 +113,8 @@ url = https://www.nguoi-viet.com/binh-luan/an-com-dai-loan-tho-ma-trung-cong/
 
 [trithucvn.co]
 match = -123.8%%
-title = Đài Loan: Cựu bác sỹ TQ phơi bày nạn thu hoạch nội tạng ...
-url = https://trithucvn.co/the-gioi/dai-loan-cuu-bac-sy-tq-phoi-bay-nan-thu-hoach-noi-tang-song-cua-dcstq.html
+title = Tổng thống Đài Loan: Trung Quốc đe dọa bất kỳ nước nào ...
+url = https://trithucvn.co/the-gioi/tong-thong-dai-loan-trung-quoc-de-doa-bat-ky-nuoc-nao-la-de-doa-toan-the-gioi.html
 
 [www.vietnamplus.vn]
 match = -119.0%%
