--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-30 13:42:38
+lastsearch = 2024-07-30 16:19:22
 
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoqEWZwKRFYg7SpFxG5ULn4P1qIgvb6SR8hLUJaQahIADYNt6uoJ
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -129.4%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
+match = -117.6%%
+title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 33
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-33-p38118982.html
 
 [www.lazada.vn]
-match = -158.8%%
-title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
-url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html?srsltid=AfmBOoo2sT811kyvM3hD1B3fSPsfni4Pf-7wLtWqLtL_8YnC_jy34LgM
+match = -94.1%%
+title = Thảm Bali Trải Sàn Phòng Ngủ Giá Tốt T04/2024
+url = https://www.lazada.vn/tag/tham-bali-trai-san-phong-ngu/?page=5
 
 [thegioidemviet.vn]
 match = -152.9%%
